# spike-rtic

./: .envrc  .gitignore  Cargo.toml  LICENSE-MIT  README.md  REFERENCE_MANUAL.md  USER_MANUAL.md  memory.x  rust-toolchain.toml  spike_rtic.code-workspace
.cargo/: config.toml
.github/: copilot-instructions.md  mcp.json  spike-rules.md
.github/workflows/: check-links.yml
AIcoder-thinkings/: README.md
aux/: 99-spike-hub.rules
dev_notes/: AI-talks to hub-example-chat.md  Demon-versus-Angel   Demon-versus-Angel.md  GDB remote seriela protocol.md  Laborne Trajectory Generator and the Luenberger State Observer.md  QEMU-no-detect-mem-fault.md  README.md  battery-managment.md  build-hat-reference.md  copilot-self-rules.md  gdb-debugging.md  gdb-vs-codelldb.md  hub_state.md  motor-encoder-mechanism.md  motor-position-controller.md  motor-pwm-findings.md  port-detection.md  privilidged-usr-apps-SVC  pybricks-lump-protocol-reference.md  pybricks_lowspeed_motor_analysis.md  rtic-async-patterns.md  self-hosted-DWT-use-address-triggering.md  sensor-fixes.md  sensor-power-requirements.md  soc-internal-temp.md  stack-corruption-and-guard-bands.md  terminal dump working gdb.md  uart-protocol.md
doc/: architecture.drawio
examples/: pick.rs
examples/hub-ram-demos/: Cargo.toml  README.md  build.rs  hub-ram-demo.x  run.sh
examples/hub-ram-demos/.cargo/: config.toml
examples/hub-ram-demos/examples/: READMEexamples.md  all_devices.rs  color_chaos.rs  color_seek.rs  color_seeker.rs  dual_motors.rs  event_driven.rs  exercise_all.rs  gdb_exercise.rs  gdb_simple.rs  hub_usr_app.rs  led_test.rs  motor_buttons.rs  motor_goto.rs  motor_sensor_test.rs  pdp11_lights.rs  puppet.rs  pwm_diag.rs  quad_devices.rs  reg_dump.rs  rtic_async_demo.rs  rtic_channels.rs  sensor_dump.rs  sensor_stream.rs  simple_test.rs  tiny_test.rs  traffic_crossroad.rs  ultrasonic_test.rs  💥 💥  💥  $D#44 
examples/hub-ram-demos/src/: main.rs
examples/hub-ram-demos/xtask/: Cargo.toml  README.md
examples/hub-ram-demos/xtask/.cargo/: config.toml
examples/hub-ram-demos/xtask/src/: main.rs
helper-tools/: 99-spike-hub.rules  README.md  attention.sh  build.rs  color_ballet.py  debug_pipeline.py  flash.sh  flash_store_run.py  hub.py  hub_state.py  spike_hub_controller.py  spike_port.py  test_gdb_proto.py  test_hub_mon.py  test_sandbox.py  test_serial_linux.sh  upload_demo.py
helper-tools/OLD/: enter_rsp.py  (+1 more)
spike-hub-api/: Cargo.toml  README.md
spike-hub-api/src/: lib.rs
src/: clocks.rs  dwt.rs  ext_flash.rs  fpb.rs  gdb_rsp.rs  imu.rs  led_matrix.rs  main.rs  motor.rs  periph.rs  pins.rs  power.rs  ram_test.rs  reg.rs  rtty.rs  sandbox.rs  sensor.rs  servo.rs  shell.rs  sound.rs  task_state.rs  trace.rs  upload.rs  usb_serial.rs  user_app_io.rs  watchdog.rs
xtask/: Cargo.toml  README.md  runner.sh
(+1 files in other folders)
